DBC22-2768: Fix for sticky hover states on mobile

--- a/src/frontend/src/Components/shared/Filters.scss
+++ b/src/frontend/src/Components/shared/Filters.scss
@@ -120,8 +120,10 @@ button.btn.open-filters {
 
           &:hover {
             cursor: pointer;
-            background-color: $Grey80;
-            color: white;
+            @media (hover: hover) {
+              background-color: $Grey80;
+              color: white;
+            }
           }
           
           &__icon {
